save chnges from laptop

--- a/Class04-23feb26/tags.html
+++ b/Class04-23feb26/tags.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Web Site</title>
@@ -9,6 +9,8 @@
 
   <body>
     <h1>Welcome to the Web development Class</h1>
-    <h2><u><i>HTML</i></u></h2>
+    <h2><u><i>HTML 5</i></u></h2>
+    <h3><b><i>Class</i></b></h3>
+
   </body>
 </html>
