class 7th start

--- a/Class06-26feb26/forms.html
+++ b/Class06-26feb26/forms.html
@@ -9,11 +9,17 @@
     <h2>Student registration form</h2>
 
 <form action="" method="post">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe">
+  <label for="uname"><b>User Name:</b></label><br>
+  <input type="text" name="uname" value="" placeholder="John"><br>
+  <label for="email" >Email:</label><br>
+  <input type="email" name="" id="" value="" placeholder="abc@gmail.com"><br>
+  <label for="">password:</label><br>
+  <input type="password" name="" id=""><br>
+  <button type="submit">submit</button>
+
 </form>
+
+<form action="" method=""></form>
 
 <p>Note that the form itself is not visible.</p>
 
