--- a/Class07-27feb26/TaskA.html
+++ b/Class07-27feb26/TaskA.html
@@ -10,7 +10,7 @@
             background-color: bisque;
         }
         #borderimg1 { 
-  border: 10px solid transparent;
+  border: 10px solid;
   padding: 15px;
   border-image: url(border.png) 30 round;
 }
