--- a/Class07-27feb26/TaskA.html
+++ b/Class07-27feb26/TaskA.html
@@ -11,9 +11,7 @@
         }
         #borderimg1 { 
   border: 10px solid;
-  padding: 15px;
-  border-image: url(border.png) 30 round;
-}
+  }
     </style>
 </head>
 
@@ -26,7 +24,7 @@
     </p>
 
     <h2>My Photo</h2>
-    <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333" id="borderimg1" >
+    <img src="pic_trulli.jpg" width="500" height="333" id="borderimg1" >
 
     <ul>
         <li>Computer Learining</li>
