--- a/Class07-27feb26/TaskA.html
+++ b/Class07-27feb26/TaskA.html
@@ -24,7 +24,7 @@
     </p>
 
     <h2>My Photo</h2>
-    <img src="https://images.pexels.com/photos/32345040/pexels-photo-32345040.jpeg" width="500" height="333" id="borderimg1" >
+    <img src="https://www.pexels.com/photo/joyful-vietnamese-child-at-play-outdoors-32345040/" width="500" height="333" id="borderimg1" >
 
     <ul>
         <li>Computer Learining</li>
