--- a/Class07-27feb26/TaskC-Box.html
+++ b/Class07-27feb26/TaskC-Box.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Practise</title>
     <style>
-        #box1 {
+        .box1 {
             background-color: rgb(134, 253, 253);
             padding: 25%;
             margin: 10%;
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="box1">
+    <div class="box1" >
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto quisquam blanditiis voluptate dolorum quas eos?
         Fuga dolorum iste obcaecati magni! Dolores deserunt blanditiis in explicabo minus quis inventore architecto
         quia.
